# Online-Nim

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  Doxyfile  README.md
include/controller/: AppController.hpp  GameController.hpp  InputScanner.hpp  LocalOnlinePlayer.hpp  LocalStreamPlayer.hpp  MenuContext.hpp  Player.hpp  RemoteOnlinePlayer.hpp
include/controller/MenuState/: GameMenuState.hpp  HostMenuState.hpp  JoinMenuState.hpp  MainMenuState.hpp  MenuContext.hpp  MenuState.hpp
include/controller/MenuStates/: GameMenuState.hpp  HostMenuState.hpp  MainMenuState.hpp  MenuState.hpp
include/controller/PlayerInput/: InputStreamPlayerInput.hpp  LocalOnlinePlayerInput.hpp  PlayerInput.hpp  RemoteOnlinePlayerInput.hpp
include/model/: GameState.hpp  Move.hpp
include/view/: GameView.hpp
src/: main.cpp
src/controller/: AppController.cpp  GameController.cpp  InputScanner.cpp  LocalOnlinePlayer.cpp  LocalStreamPlayer.cpp  MainMenuState.cpp  MenuContext.cpp  RemoteOnlinePlayer.cpp
src/controller/MenuState/: GameMenuState.cpp  HostMenuState.cpp  JoinMenuState.cpp  MainMenuState.cpp  MenuContext.cpp
src/controller/MenuStates/: GameMenuState.cpp  HostMenuState.cpp  JoinMenuState.cpp  MainMenuState.cpp
src/controller/PlayerInput/: InputStreamPlayerInput.cpp  LocalOnlinePlayerInput.cpp  RemoteOnlinePlayerInput.cpp
src/model/: GameState.cpp  Move.cpp
src/view/: GameView.cpp
tests/: example_test.cpp  menustate_integration_test.cpp
